force-app/main/default/objects/Sentiment_Analysis__c/Sentiment_Analysis__c.object-meta.xml
<CustomObject>
    <label>Sentiment Analysis</label>
    <nameField>
        <displayFormat>Sentiment - {0000}</displayFormat>
        <label>Sentiment Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sentiment Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>