force-app/main/default/objects/Sentiment_Analysis__c/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <inlineHelpText>Response Time in millisecond</inlineHelpText>
    <label>Response Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>