force-app/main/default/objects/Sentiment_Analysis__c/fields/Sentiments_Input__c.field-meta.xml
<CustomField>
    <fullName>Sentiments_Input__c</fullName>
    <label>Sentiments Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>