force-app/main/default/objects/Sentiment_Analysis__c/fields/Sentiments_Prediction_Output__c.field-meta.xml
<CustomField>
    <fullName>Sentiments_Prediction_Output__c</fullName>
    <label>Sentiments Prediction Output</label>
    <length>255</length>
    <type>Text</type>
</CustomField>