force-app/main/default/objects/Sentiment_Analysis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sentiments_Input__c</columns>
    <columns>Sentiments_Prediction_Output__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>